@@ -1,0 +1,30 @@
+#reposurgeon sourcetype cvs
+blob
+mark :1
+data 29
+Content of file1 version 1.1
+
+commit refs/heads/master
+mark :2
+committer user1 <user1> 631188000 +0000
+data 20
+Add file1 and file2
+M 100644 :1 file1
+
+blob
+mark :3
+data 29
+Content of file1 version 1.2
+
+commit refs/heads/master
+mark :4
+committer user1 <user1> 631191600 +0000
+data 53
+Modify file1 (references 1990-01-01T10:00:00Z!user1)
+from :2
+M 100644 :3 file1
+
+reset refs/heads/master
+from :4
+
+done
