@@ -5,6 +5,7 @@ Repository head::
      Added "gui" command for GUI browsing of repositories.
      Fixed a deep bug in the graft and unite commands.
      Add prefix negation operator ~ for pathsets.
+     Reapaired a bug in CVS reference lifting.
 
 4.38: 2023-06-14::
      Experimental Perforce (p4) mirroring support in repotool.
